# unit-cloud-gen

./: .gitignore  README.md  auth_tokens.json  docker-compose.yml  leetcode_scraper.py
backend/: Dockerfile.dev  README_LocalClient_Integration.md  README_Meta_Models.md  pyproject.toml  requirements.txt  setup_meta_models.py  test_generator.py  test_models.py
backend/app/: config.py  main.py
backend/app/models/: code_generation.py
backend/app/services/: llm.py  storage.py
backend/db/: connection.py  repository.py
backend/db/migrations/: __init__.py  run_migration.py
backend/llm_client/: __init__.py  base_client.py  local_client.py  openai_client.py
backend/test_analyzer/: README.md  README_Docker.md  TestAnalyzer.py  __init__.py  docker_client.py  jest_analyzer.py  python_analyzer.py  test_docker_approach.py
backend/test_analyzer/docker/: build_images.sh
backend/test_analyzer/docker/javascript/: Dockerfile  entrypoint.sh  jest.setup.js  package.json
backend/test_analyzer/docker/python/: Dockerfile  entrypoint.sh
basecases/: CacheManager.js  DataValidator.js  EventBus.js  QueueManager.js  StateManager.js
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
scraped_problems/: arrays.json  arrays_easy.json  arrays_hard.json  arrays_medium.json  binary-search.json  binary-search_hard.json  dynamic-programming.json  dynamic-programming_hard.json  hash-tables.json  hash-tables_easy.json  hash-tables_medium.json  linked-lists.json  linked-lists_medium.json  math.json  math_easy.json  math_medium.json  sliding-window.json  (+8 more)
(+33 files in other folders)
