[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JoaoVitorSD",email = "joaovitorsantanadepollo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
